# simian

./: .gitignore  deep_thinking.py  hello_world.py  info_collecting.py  mindmap_generator.py  pdf_summarizer.py  pyproject.toml
simian/: utils.py
